# visitcare-shift-optimizer

./: .envrc  .firebaserc  .gitconfig.local  .gitignore  CLAUDE.md  firebase.json
agent/: .gitignore  Dockerfile  cloudbuild.yaml  pyproject.toml
agent/src/api/: main.py
agent/src/helper_support/: agent.py  prompts.py
agent/src/helper_support/tools/: scoped_tools.py
agent/src/shared/: auth.py  config.py  firestore_client.py
agent/src/shift_manager/: agent.py  prompts.py
agent/src/shift_manager/tools/: __init__.py  customer_tools.py  helper_tools.py  order_tools.py  schedule_tools.py
agent/tests/: conftest.py  test_auth.py  test_helper_support.py  test_llm_quality.py  test_scoped_tools.py  test_shift_manager.py
firebase/: firestore.rules  (+4 more)
optimizer/: .dockerignore  .gitignore  Dockerfile  cloudbuild.yaml  pyproject.toml
optimizer/deploy/: cleanup-policy.json  setup-ar.sh
optimizer/src/optimizer/: __init__.py
optimizer/src/optimizer/api/: __init__.py  auth.py  main.py  routes.py  routes_common.py  routes_import.py  routes_notify.py  routes_orders.py  routes_report.py  schemas.py
optimizer/src/optimizer/data/: csv_loader.py  firestore_loader.py  firestore_writer.py  link_household.py  normalize_address.py
optimizer/src/optimizer/engine/: constraints.py  solver.py
optimizer/src/optimizer/integrations/: note_diff.py  note_parser.py  sheets_reader.py
optimizer/src/optimizer/models/: __init__.py  common.py  constraint.py  customer.py  helper.py  optimization_run.py  order.py  problem.py  staff_unavailability.py  travel_time.py
optimizer/src/optimizer/notification/: __init__.py  chat_sender.py  recipients.py  sender.py  templates.py
optimizer/src/optimizer/report/: aggregation.py  models.py  sheets_writer.py
optimizer/tests/: conftest.py  test_api.py  test_api_contract.py  test_auth.py  test_benchmark.py  test_chat_sender.py  test_constraint_weights.py  test_constraint_weights_api.py  test_csv_loader.py  test_decomposition.py  test_export_report.py  test_firestore_loader.py  test_integration.py  test_link_household.py  test_models.py  test_normalize_address.py  test_note_diff.py  test_note_parser.py  test_notification.py  test_report_aggregation.py  test_sheets_writer.py  test_soft_constraints.py  test_soft_coverage.py  test_solver_basic.py  test_solver_sparse.py
optimizer/tests/test_constraints/: test_allowed_staff.py  test_availability.py  test_gender.py  test_household.py  test_ng_staff.py  test_no_overlap.py  test_qualification.py  test_training.py  test_travel_time.py  test_unavailability.py  test_walk_distance.py
(+342 files in other folders)
